Don't allocate a StringImpl for every Number JSValue in JSON.stringify(). <https://webkit.org/b/144676>

Reviewed by Darin Adler.

We were creating a new String for every number JSValue passing through the JSON stringifier.
These StringImpl allocations were dominating one of the Kraken JSON benchmarks.
Optimize this by using StringBuilder::appendECMAScriptNumber() which uses a stack buffer
for the conversion instead.

13% progression on Kraken/json-stringify-tinderbox.

* runtime/JSONObject.cpp:
(JSC::Stringifier::appendStringifiedValue):

Canonical link: https://commits.webkit.org/162708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183874 268f45cc-cd09-0410-ab3c-d52691b4dbfc